# experiments

./: .gitignore  .travis.yml  Battleship.hs  Battleship.ipynb  Discount.hs  Dockerfile  Duffer.ipynb  LICENSE  Makefile  README.md  app.py  battleship.cabal  bio.txt  cooking-with-dags.txt  deploy.sh  discount.cabal  driftwood.cabal  duffer.py  fun-with-ci.txt  getlatex.sh  gistfile1.txt  interpreter.py  prepare.sh  readme.md  resume_header.tex  stack.yaml  texlive.profile  tic-tac-toe.py  toylisp.py  toylisp_peg.py  toylisp_ply.py  typed-holes.txt
.ci/: build_pdf.sh
1brc/: 1brc.cabal  LICENSE  flake.nix
1brc/app/: Main.hs
1brc/src/: Hashtable.hs  OneBRC.hs
Discount/: Format.hs  Types.hs
acid-experiment/: ChangeLog.md  Main.hs  acid-experiment.cabal  default.nix
app/: Main.hs
babys-first-ghc-api-call/: Main.hs  README.md  Test.hs  babys-first-ghc-api-call.cabal  shell.nix
bangbangcon-proposals/: cooking-with-dags.txt  typed-holes.txt
bangbangcon-west-talk-proposals/: persistent-data-structures.txt  rent-is-too-damn-high.txt
bash-notebook/: default.nix
basic-modeling/: shell.nix
basic-modeling/sevenpaces/: beanscrying.mzn  caotest.mzn  sevenpaces.mzn
battleship/: Battleship.hs  stack.yaml
battleship/notebooks/: Battleship.ipynb
benchmark-blake2/: ChangeLog.md  Main.hs  benchmark-blake2.cabal  default.nix
bump-all-cabal-hashes/: updater  versions.json
concurrent-merge/: Main.hs
deploy/app/: default.nix  deploy.cabal  service.nix
deploy/nix/: default.nix  service.nix
deploy/ops/: trivial-vbox.nix  trivial.nix  webserver.nix
discount/Discount/: Format.hs
driftwood/: README.md  default.nix  driftwood.cabal
driftwood/app/: Main.hs
driftwood/src/: Driftwood.hs
duffer.py/: Duffer.ipynb
essay-editor-backend/: CHANGELOG.md  LICENSE  default.nix  essay-editor-backend.cabal
essay-editor-backend/app/: Main.hs
gi/: default.nix
git-from-scratch/: default.nix  git-from-scratch.cabal  ihaskell-updater  nixpkgs-updater  nixpkgs.json  versions.json
git-from-scratch/notebooks/: Git.ipynb
harimau/: CHANGELOG.md  LICENSE  croaring.nix  default.nix  harimau.cabal
harimau/cbits/: roaring.c  roaring.h
harimau/src/: Harimau.hs
harimau/src/Harimau/: Bindings.hs
harimau/test/: Main.hs
hlint-live/: default.nix  glitch.nix  versions.json
hlint-live/ghc-lib-parser-8.10.1.20200412/: ghc-lib-parser.cabal
hlint-live/ghc-lib-parser-8.10.1.20200412/compiler/GHC/: Hs.hs
hlint-live/ghc-lib-parser-8.10.1.20200412/compiler/basicTypes/: Avail.hs  ConLike.hs  DataCon.hs  Demand.hs  Id.hs  IdInfo.hs  Literal.hs  MkId.hs  NameCache.hs  NameEnv.hs  NameSet.hs  PatSyn.hs  RdrName.hs  UniqSupply.hs  Unique.hs  Var.hs  VarSet.hs
hlint-live/ghc-lib-parser-8.10.1.20200412/compiler/cbits/: genSym.c
hlint-live/ghc-lib-parser-8.10.1.20200412/compiler/coreSyn/: CoreArity.hs  CoreFVs.hs  CoreMap.hs  CoreOpt.hs  CoreSubst.hs  CoreSyn.hs  CoreTidy.hs  CoreUnfold.hs  CoreUtils.hs  MkCore.hs
hlint-live/hlint-3.0.4/src/: CmdLine.hs
hlint-live/hlint-3.1.1/: hlint.cabal
hlint-live/hlint-3.1.1/src/: CmdLine.hs
hlint-live/hlint-live/: CHANGELOG.md  HLintPath.hs  LICENSE  Main.hs  hlint-live.cabal
hnix-serve/: README.md  hnix-serve.cabal  stack.yaml
hnix-serve/Nix/: Serve.hs
hnix-serve/app/: Main.hs
hugs/: configure  configure.ac  default.nix  hugs.nix  hugs98.spec
hugs/debian/: control  hugs.install
hugs/demos/: Makefile.in
hugs/libraries/: Makefile.in
hydra/: idris.nix  ihaskell.nix
idris/: BSTree.idr  DataStore.idr  Exercises41.idr  Matrix.idr  Vect.idr  Vehicle.idr  WordLength.idr  default.nix  other.nix  shell.nix  versions.json
idris/Array/: Array.idr
idris/Chapter10/: DescribeList.idr  Exercises101.idr  MergeSort.idr
idris/Chapter3/: Exercises32.idr  VectSort.idr
idris/Chapter4/: Exercises4.idr  Exercises42.idr  Picture.idr  Shape.idr  Tree.idr
idris/Chapter5/: DepPairs.idr  Exercises5.idr  Exercises52.idr  ReadVect.idr
idris/Chapter6/: Adder.idr  DataStore.idr  Exercises62.idr  Maybe.idr  Printf.idr  TypeFuns.idr  TypeSynonym.idr
idris/Chapter7/: Eq.idr  Exercises71.idr  Exercises72.idr  Expr.idr  Ord.idr  Show.idr  Tree.idr
idris/Chapter8/: AppendVec.idr  CheckEqDec.idr  EqNat.idr  ExactLength.idr  ExactLengthDec.idr  Exercises81.idr  Exercises82.idr  Exercises83.idr  ReverseVec.idr
idris/Chapter9/: Exercises91.idr
idris/Vector/: Vector.idr
ihaskell-docker/: Dockerfile  default.nix
ihaskell-hydra/: release.nix
ihaskell-nix/: default.nix  dev-notebook.nix  release.nix
ihaskell-nix-docker/: Dockerfile  default.nix
makehaskell/: blank-me-up.nix  default.nix
mosml/: default.nix
nhc98/: default.nix
opentelemetry-plugin-bug/: flake.nix  opentelemetry-plugin-bug.cabal  opentelemetry-plugin-bug.nix
override-cairo/: default.nix
override-haskell-src-exts/: default.nix
pandoc-pinned/: default.nix  fetchFromGitHub.nix  pinned.nix  versions.json
python-zulip-api/: default.nix
readp/: ReadP.hs  readp.cabal
repo2docker/: shell.nix
resumate/: .travis.yml  resume.md
resumate/templates/: header.tex
rise/: notebook.nix  rise.nix  textfile.nix
rp-example/: CHANGELOG.md  Main.hs  default.nix  rp-example.cabal  static-site.nix  versions.json
rp-example/hamt/: CHANGELOG.md  hamt.cabal
rp-example/hamt/app/: Main.hs
rp-example/hamt/src/: HAMT.hs  Main.hs
rusting/branches/: Cargo.toml
rusting/branches/src/: main.rs
rusting/functions/: Cargo.toml
rusting/functions/src/: main.rs
rusting/guessing_game/: Cargo.toml
rusting/guessing_game/src/: main.rs
rusting/hello_world/: main
rusting/loops/: Cargo.toml
rusting/loops/src/: main.rs
rusting/rectangles/: Cargo.toml
rusting/rectangles/src/: main.rs
rusting/restaurant/: Cargo.toml
rusting/restaurant/src/: lib.rs
scripts/: build_pdf.sh
src/: Driftwood.hs
stack-env-nix/: default.nix  ihaskell.nix  latest-stack-ihaskell.nix
static-haskell-nix/: default.nix
templates/: header.css
test/: Spec.hs
tic-tac-toe/: LICENSE  tic-tac-toe.py
tidal/: .ghci  shell.nix
toylisp/: .gitignore
(+64 files in other folders)
