name:                battleship
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/vaibhavsagar/battleship#readme
license:             BSD3
license-file:        LICENSE
author:              Vaibhav Sagar
maintainer:          vaibhavsagar@gmail.com
copyright:           2016 Vaibhav Sagar
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Battleship
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , transformers
                     , random
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/vaibhavsagar/battleship
