name:                babys-first-ghc-api-call
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/babys-first-ghc-api-call#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
data-files:          Test.hs
cabal-version:       >=1.10

executable babys-first-ghc-api-call
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base > 4.7 && < 5
                     , ghc
                     , ghc-paths
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/babys-first-ghc-api-call
