name:                hnix-serve
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vaibhavsagar/hnix-serve#readme
license:             BSD3
license-file:        LICENSE
author:              Vaibhav Sagar
maintainer:          vaibhavsagar@gmail.com
copyright:           2017 Vaibhav Sagar
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Nix.Serve
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , hnix-store
                     , http-types
                     , scotty
                     , text
                     , transformers
  default-language:    Haskell2010

executable hnix-serve-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hnix-serve
                     , warp
  default-language:    Haskell2010

test-suite hnix-serve-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hnix-serve
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vaibhavsagar/hnix-serve
